--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "webpack",
+  "name": "webpack-example",
   "version": "0.1.0",
   "private": true,
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "scripts": {
+    "watch": "webpack watch",
+    "build": "webpack"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -10,17 +16,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "less": "^4.1.1",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
+    "typescript": "~4.1.5",
     "web-vitals": "^1.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +38,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "babel-loader": "^8.2.2",
+    "ts-loader": "^9.2.3",
+    "webpack": "^5.46",
+    "webpack-cli": "^4.7.2"
+  },
+  "peerDependencies": {
+    "react": ">=17.0.0",
+    "react-dom": ">=17.0.0"
   }
 }
