--- a/package.json
+++ b/package.json
@@ -9,16 +9,7 @@
     "build": "webpack"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "less": "^4.1.1",
     "react-scripts": "4.0.3",
-    "typescript": "~4.1.5",
     "web-vitals": "^1.0.1"
   },
   "eslintConfig": {
@@ -40,12 +31,17 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "babel-loader": "^8.2.2",
     "ts-loader": "^9.2.3",
     "webpack": "^5.46",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "typescript": "~4.1.5"
   },
   "peerDependencies": {
     "react": ">=17.0.0",
